backend/tests/fixtures/azure_nsg_sample.json
{
  "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg-sample-networking/providers/Microsoft.Network/networkSecurityGroups/nsg-sample-web-tier",
  "name": "nsg-sample-web-tier",
  "type": "Microsoft.Network/networkSecurityGroups",
  "location": "eastus2",
  "tags": {
    "environment": "sample",
    "team": "platform-engineering",
    "costCenter": "CC-0000"
  },
  "properties": {
    "provisioningState": "Succeeded",
    "resourceGuid": "00000000-0000-0000-0000-000000000001",
    "flushConnection": false,
    "securityRules": [
      {
        "name": "Allow-HTTPS-Inbound",
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg-sample-networking/providers/Microsoft.Network/networkSecurityGroups/nsg-sample-web-tier/securityRules/Allow-HTTPS-Inbound",
        "type": "Microsoft.Network/networkSecurityGroups/securityRules",
        "properties": {
          "provisioningState": "Succeeded",
          "description": "Allow HTTPS from Internet to web tier",
          "protocol": "Tcp",
          "sourcePortRange": "*",
          "destinationPortRange": "443",
          "sourceAddressPrefix": "*",
          "destinationAddressPrefix": "10.1.2.0/24",
          "access": "Allow",
          "priority": 100,
          "direction": "Inbound",
          "sourcePortRanges": [],
          "destinationPortRanges": [],
          "sourceAddressPrefixes": [],
          "destinationAddressPrefixes": []
        }
      },
      {
        "name": "Allow-HTTP-Inbound",
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg-sample-networking/providers/Microsoft.Network/networkSecurityGroups/nsg-sample-web-tier/securityRules/Allow-HTTP-Inbound",
        "type": "Microsoft.Network/networkSecurityGroups/securityRules",
        "properties": {
          "provisioningState": "Succeeded",
          "description": "Allow HTTP from Internet for redirect to HTTPS",
          "protocol": "Tcp",
          "sourcePortRange": "*",
          "destinationPortRange": "80",
          "sourceAddressPrefix": "*",
          "destinationAddressPrefix": "10.1.2.0/24",
          "access": "Allow",
          "priority": 110,
          "direction": "Inbound",
          "sourcePortRanges": [],
          "destinationPortRanges": [],
          "sourceAddressPrefixes": [],
          "destinationAddressPrefixes": []
        }
      },
      {
        "name": "MISCONFIGURED-Allow-SSH-Any",
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg-sample-networking/providers/Microsoft.Network/networkSecurityGroups/nsg-sample-web-tier/securityRules/MISCONFIGURED-Allow-SSH-Any",
        "type": "Microsoft.Network/networkSecurityGroups/securityRules",
        "properties": {
          "provisioningState": "Succeeded",
          "description": "TEMP: SSH access for debugging - TODO remove",
          "protocol": "Tcp",
          "sourcePortRange": "*",
          "destinationPortRange": "22",
          "sourceAddressPrefix": "*",
          "destinationAddressPrefix": "*",
          "access": "Allow",
          "priority": 200,
          "direction": "Inbound",
          "sourcePortRanges": [],
          "destinationPortRanges": [],
          "sourceAddressPrefixes": [],
          "destinationAddressPrefixes": []
        }
      },
      {
        "name": "Allow-Bastion-SSH",
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg-sample-networking/providers/Microsoft.Network/networkSecurityGroups/nsg-sample-web-tier/securityRules/Allow-Bastion-SSH",
        "type": "Microsoft.Network/networkSecurityGroups/securityRules",
        "properties": {
          "provisioningState": "Succeeded",
          "description": "Allow SSH only from bastion subnet",
          "protocol": "Tcp",
          "sourcePortRange": "*",
          "destinationPortRange": "22",
          "sourceAddressPrefix": "10.1.0.0/26",
          "destinationAddressPrefix": "10.1.2.0/24",
          "access": "Allow",
          "priority": 210,
          "direction": "Inbound",
          "sourcePortRanges": [],
          "destinationPortRanges": [],
          "sourceAddressPrefixes": [],
          "destinationAddressPrefixes": []
        }
      },
      {
        "name": "MISCONFIGURED-Allow-All-Ports",
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg-sample-networking/providers/Microsoft.Network/networkSecurityGroups/nsg-sample-web-tier/securityRules/MISCONFIGURED-Allow-All-Ports",
        "type": "Microsoft.Network/networkSecurityGroups/securityRules",
        "properties": {
          "provisioningState": "Succeeded",
          "description": "",
          "protocol": "*",
          "sourcePortRange": "*",
          "destinationPortRange": "*",
          "sourceAddressPrefix": "0.0.0.0/0",
          "destinationAddressPrefix": "*",
          "access": "Allow",
          "priority": 300,
          "direction": "Inbound",
          "sourcePortRanges": [],
          "destinationPortRanges": [],
          "sourceAddressPrefixes": [],
          "destinationAddressPrefixes": []
        }
      },
      {
        "name": "Allow-AppGw-HealthProbe",
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg-sample-networking/providers/Microsoft.Network/networkSecurityGroups/nsg-sample-web-tier/securityRules/Allow-AppGw-HealthProbe",
        "type": "Microsoft.Network/networkSecurityGroups/securityRules",
        "properties": {
          "provisioningState": "Succeeded",
          "description": "Application Gateway V2 health probes",
          "protocol": "Tcp",
          "sourcePortRange": "*",
          "destinationPortRange": null,
          "sourceAddressPrefix": "GatewayManager",
          "destinationAddressPrefix": "10.1.2.0/24",
          "access": "Allow",
          "priority": 400,
          "direction": "Inbound",
          "sourcePortRanges": [],
          "destinationPortRanges": [
            "65200-65535"
          ],
          "sourceAddressPrefixes": [],
          "destinationAddressPrefixes": []
        }
      },
      {
        "name": "Allow-MultiSource-DB",
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg-sample-networking/providers/Microsoft.Network/networkSecurityGroups/nsg-sample-web-tier/securityRules/Allow-MultiSource-DB",
        "type": "Microsoft.Network/networkSecurityGroups/securityRules",
        "properties": {
          "provisioningState": "Succeeded",
          "description": "Allow DB access from app and management subnets",
          "protocol": "Tcp",
          "sourcePortRange": "*",
          "destinationPortRange": null,
          "sourceAddressPrefix": null,
          "destinationAddressPrefix": "10.1.3.0/24",
          "access": "Allow",
          "priority": 500,
          "direction": "Inbound",
          "sourcePortRanges": [],
          "destinationPortRanges": [
            "1433",
            "5432",
            "3306"
          ],
          "sourceAddressPrefixes": [
            "10.1.2.0/24",
            "10.1.5.0/24",
            "10.2.0.0/16"
          ],
          "destinationAddressPrefixes": []
        }
      },
      {
        "name": "MISCONFIGURED-Allow-RDP-Any",
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg-sample-networking/providers/Microsoft.Network/networkSecurityGroups/nsg-sample-web-tier/securityRules/MISCONFIGURED-Allow-RDP-Any",
        "type": "Microsoft.Network/networkSecurityGroups/securityRules",
        "properties": {
          "provisioningState": "Succeeded",
          "description": "RDP for Windows admin",
          "protocol": "Tcp",
          "sourcePortRange": "*",
          "destinationPortRange": "3389",
          "sourceAddressPrefix": "Internet",
          "destinationAddressPrefix": "*",
          "access": "Allow",
          "priority": 600,
          "direction": "Inbound",
          "sourcePortRanges": [],
          "destinationPortRanges": [],
          "sourceAddressPrefixes": [],
          "destinationAddressPrefixes": []
        }
      },
      {
        "name": "Deny-All-Inbound",
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg-sample-networking/providers/Microsoft.Network/networkSecurityGroups/nsg-sample-web-tier/securityRules/Deny-All-Inbound",
        "type": "Microsoft.Network/networkSecurityGroups/securityRules",
        "properties": {
          "provisioningState": "Succeeded",
          "description": "Explicit deny-all at bottom of ruleset",
          "protocol": "*",
          "sourcePortRange": "*",
          "destinationPortRange": "*",
          "sourceAddressPrefix": "*",
          "destinationAddressPrefix": "*",
          "access": "Deny",
          "priority": 4000,
          "direction": "Inbound",
          "sourcePortRanges": [],
          "destinationPortRanges": [],
          "sourceAddressPrefixes": [],
          "destinationAddressPrefixes": []
        }
      },
      {
        "name": "Allow-Outbound-Internet",
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg-sample-networking/providers/Microsoft.Network/networkSecurityGroups/nsg-sample-web-tier/securityRules/Allow-Outbound-Internet",
        "type": "Microsoft.Network/networkSecurityGroups/securityRules",
        "properties": {
          "provisioningState": "Succeeded",
          "description": "Allow outbound HTTPS to Internet",
          "protocol": "Tcp",
          "sourcePortRange": "*",
          "destinationPortRange": "443",
          "sourceAddressPrefix": "10.1.2.0/24",
          "destinationAddressPrefix": "Internet",
          "access": "Allow",
          "priority": 100,
          "direction": "Outbound",
          "sourcePortRanges": [],
          "destinationPortRanges": [],
          "sourceAddressPrefixes": [],
          "destinationAddressPrefixes": []
        }
      }
    ],
    "defaultSecurityRules": [
      {
        "name": "AllowVnetInBound",
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg-sample-networking/providers/Microsoft.Network/networkSecurityGroups/nsg-sample-web-tier/defaultSecurityRules/AllowVnetInBound",
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
        "properties": {
          "provisioningState": "Succeeded",
          "description": "Allow inbound traffic from all VMs in VNET",
          "protocol": "*",
          "sourcePortRange": "*",
          "destinationPortRange": "*",
          "sourceAddressPrefix": "VirtualNetwork",
          "destinationAddressPrefix": "VirtualNetwork",
          "access": "Allow",
          "priority": 65000,
          "direction": "Inbound",
          "sourcePortRanges": [],
          "destinationPortRanges": [],
          "sourceAddressPrefixes": [],
          "destinationAddressPrefixes": []
        }
      },
      {
        "name": "AllowAzureLoadBalancerInBound",
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg-sample-networking/providers/Microsoft.Network/networkSecurityGroups/nsg-sample-web-tier/defaultSecurityRules/AllowAzureLoadBalancerInBound",
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
        "properties": {
          "provisioningState": "Succeeded",
          "description": "Allow inbound traffic from azure load balancer",
          "protocol": "*",
          "sourcePortRange": "*",
          "destinationPortRange": "*",
          "sourceAddressPrefix": "AzureLoadBalancer",
          "destinationAddressPrefix": "*",
          "access": "Allow",
          "priority": 65001,
          "direction": "Inbound",
          "sourcePortRanges": [],
          "destinationPortRanges": [],
          "sourceAddressPrefixes": [],
          "destinationAddressPrefixes": []
        }
      },
      {
        "name": "DenyAllInBound",
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg-sample-networking/providers/Microsoft.Network/networkSecurityGroups/nsg-sample-web-tier/defaultSecurityRules/DenyAllInBound",
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
        "properties": {
          "provisioningState": "Succeeded",
          "description": "Deny all inbound traffic",
          "protocol": "*",
          "sourcePortRange": "*",
          "destinationPortRange": "*",
          "sourceAddressPrefix": "*",
          "destinationAddressPrefix": "*",
          "access": "Deny",
          "priority": 65500,
          "direction": "Inbound",
          "sourcePortRanges": [],
          "destinationPortRanges": [],
          "sourceAddressPrefixes": [],
          "destinationAddressPrefixes": []
        }
      },
      {
        "name": "AllowVnetOutBound",
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg-sample-networking/providers/Microsoft.Network/networkSecurityGroups/nsg-sample-web-tier/defaultSecurityRules/AllowVnetOutBound",
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
        "properties": {
          "provisioningState": "Succeeded",
          "description": "Allow outbound traffic from all VMs to all VMs in VNET",
          "protocol": "*",
          "sourcePortRange": "*",
          "destinationPortRange": "*",
          "sourceAddressPrefix": "VirtualNetwork",
          "destinationAddressPrefix": "VirtualNetwork",
          "access": "Allow",
          "priority": 65000,
          "direction": "Outbound",
          "sourcePortRanges": [],
          "destinationPortRanges": [],
          "sourceAddressPrefixes": [],
          "destinationAddressPrefixes": []
        }
      },
      {
        "name": "AllowInternetOutBound",
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg-sample-networking/providers/Microsoft.Network/networkSecurityGroups/nsg-sample-web-tier/defaultSecurityRules/AllowInternetOutBound",
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
        "properties": {
          "provisioningState": "Succeeded",
          "description": "Allow outbound traffic from all VMs to Internet",
          "protocol": "*",
          "sourcePortRange": "*",
          "destinationPortRange": "*",
          "sourceAddressPrefix": "*",
          "destinationAddressPrefix": "Internet",
          "access": "Allow",
          "priority": 65001,
          "direction": "Outbound",
          "sourcePortRanges": [],
          "destinationPortRanges": [],
          "sourceAddressPrefixes": [],
          "destinationAddressPrefixes": []
        }
      },
      {
        "name": "DenyAllOutBound",
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg-sample-networking/providers/Microsoft.Network/networkSecurityGroups/nsg-sample-web-tier/defaultSecurityRules/DenyAllOutBound",
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
        "properties": {
          "provisioningState": "Succeeded",
          "description": "Deny all outbound traffic",
          "protocol": "*",
          "sourcePortRange": "*",
          "destinationPortRange": "*",
          "sourceAddressPrefix": "*",
          "destinationAddressPrefix": "*",
          "access": "Deny",
          "priority": 65500,
          "direction": "Outbound",
          "sourcePortRanges": [],
          "destinationPortRanges": [],
          "sourceAddressPrefixes": [],
          "destinationAddressPrefixes": []
        }
      }
    ],
    "subnets": [
      {
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg-sample-networking/providers/Microsoft.Network/virtualNetworks/vnet-sample/subnets/snet-web-tier"
      }
    ]
  }
}
